--- a/app/templates/biochemistry_sections/creatinine_clearance.html
+++ b/app/templates/biochemistry_sections/creatinine_clearance.html
@@ -1,4 +1,4 @@
-<div class="sidecontent" id="creatinine_clearance">
+<div role="tabpanel" class="tab-pane" id="creatinine_clearance">
 	<div>
 		<form>
 			<table id="creaCleartable" class="tableContainer">
