--- a/app/templates/biochemistry_sections/egfr.html
+++ b/app/templates/biochemistry_sections/egfr.html
@@ -1,4 +1,4 @@
-<div class="sidecontent" id="egfr">
+<div role="tabpanel" class="tab-pane" id="egfr">
 	<div>
 		<form>
 			<div id="egfrAdult" class="egfrType">
