--- a/app/templates/biochemistry_sections/lipid_profile.html
+++ b/app/templates/biochemistry_sections/lipid_profile.html
@@ -1,4 +1,4 @@
-<div class="sidecontent" id="lipid_profile">
+<div role="tabpanel" class="tab-pane" id="lipid_profile">
 	<div>
 		<form>
 			<table id="lipidProfileTable" class="tableContainer">
@@ -40,8 +40,8 @@
 				  </tr>
 			</table>
 			<div class="buttonContainer">
-				<input type="button" class="button" value="CALCULATE" onclick="calclp()"></input>
-				<input type="button" class="button" value="CLEAR" onclick="clearData()"></input>
+				<input type="button" class="button" value="CALCULATE" onclick="calclp()">
+				<input type="button" class="button" value="CLEAR" onclick="clearData()">
 			</div>
 			
 		  <p><strong>Note:</strong> If there is a value on the direct LDL, this will be used for calculating the ratios; the calculated LDL is just for comparison.
