--- a/app/templates/biochemistry_sections/tibc.html
+++ b/app/templates/biochemistry_sections/tibc.html
@@ -1,4 +1,4 @@
-<div class="sidecontent" id="tibc">
+<div role="tabpanel" class="tab-pane" id="tibc">
 	<div>
 		<form>
 			  <table id="tibcTable" class="tableContainer">
