--- a/app/templates/biochemistry_sections/transferrin_saturation.html
+++ b/app/templates/biochemistry_sections/transferrin_saturation.html
@@ -1,4 +1,4 @@
-<div class="sidecontent" id="transferrin_saturation">
+<div role="tabpanel" class="tab-pane" id="transferrin_saturation">
 	<div>
 		<form>
 			  <table id="tsatTable" class="tableContainer">
