--- a/app/templates/biochemistry_sections/urea_to_bun.html
+++ b/app/templates/biochemistry_sections/urea_to_bun.html
@@ -1,4 +1,4 @@
-<div class="sidecontent" id="urea_to_bun">
+<div role="tabpanel" class="tab-pane" id="urea_to_bun">
 	<div>
 		<form>
 		  <table id="ubunTable" class="tableContainer">
