--- a/app/templates/biochemistry_sections/urine_chemistry.html
+++ b/app/templates/biochemistry_sections/urine_chemistry.html
@@ -1,4 +1,4 @@
-<div class="sidecontent" id="urine_chemistry">
+<div role="tabpanel" class="tab-pane" id="urine_chemistry">
 	<form class="24hrUchemForm">
 	  <table id="24hrUchemTable" class="tableContainer">
 		<tr>
