--- a/app/templates/biochemistry_sections/hba1c.html
+++ b/app/templates/biochemistry_sections/hba1c.html
@@ -1,4 +1,4 @@
-<div class="sidecontent row" id="hba1c">
+<div role="tabpanel" class="tab-pane" id="hba1c">
 	<div class="col-md-12">
 		<div class="choose_unit">
 			<span class="hba1c_radio"><input type="radio" class="inputRadio" name="hba1c_unit" id="hba1c_mgdl" checked>
