--- a/app/templates/biochemistry.html
+++ b/app/templates/biochemistry.html
@@ -8,7 +8,7 @@
 			<li role="presentation"><a href="#urine_chemistry" aria-controls="urine_chemistry" role="tab" data-toggle="pill">Urine Chemistry</a></li>
 			<li role="presentation"><a href="#urea_to_bun" aria-controls="urea_to_bun" role="tab" data-toggle="pill">Urea to BUN</a></li>
 			<li role="presentation"><a href="#tibc" aria-controls="tibc" role="tab" data-toggle="pill">TIBC</a></li>
-			<li role="presentation"><a href="#transferring_saturation" aria-controls="transferrin_saturation" role="tab" data-toggle="pill">Transferrin Saturation</a></li>
+			<li role="presentation"><a href="#transferrin_saturation" aria-controls="transferrin_saturation" role="tab" data-toggle="pill">Transferrin Saturation</a></li>
 		</ul>
 		<div class="tab-content col-md-6">
 			{% include 'biochemistry_sections/lipid_profile.html' %}
