--- a/app/templates/biochemistry_sections/creatinine_clearance.html
+++ b/app/templates/biochemistry_sections/creatinine_clearance.html
@@ -41,7 +41,7 @@
 		  </table>
 		  <div class="buttonContainer">
 			<input type="button" class="button" value="CALCULATE" onclick="calccreaclear()"></input>
-			<input type="button" class="button" value="CLEAR" onclick="clearData()"></input>
+			<input type="button" class="button clear_button" value="CLEAR"></input>
 		  </div>
 		  
 		</form>
