--- a/app/templates/biochemistry_sections/egfr.html
+++ b/app/templates/biochemistry_sections/egfr.html
@@ -31,7 +31,7 @@
 				  </table>
 					<div class="buttonContainer">
 					  <input type="button" class="button" value="CALCULATE" onclick="calcegfr()"></input>
-					  <input type="button" class="button" value="CLEAR" onclick="clearData()"></input>
+					  <input type="button" class="button clear_button" value="CLEAR"></input>
 					</div>
 					<p><strong>Note:</strong> The formula used in this equation is based on the CKD-EPI Creatinine Equation (2009) which is recommended by the National Kidney Foundation.</p>
 					<p>To be used only for patients >18 years old.</p>
@@ -72,7 +72,7 @@
 				  </table>
 				  <div class="buttonContainer">
 					  <input type="button" class="button" value="CALCULATE" onclick="calcEgfrP()"></input>
-					  <input type="button" class="button" value="CLEAR" onclick="clearData()"></input>
+					  <input type="button" class="button clear_button" value="CLEAR"></input>
 				  </div>
 					<p><strong>Note:</strong> The formula used in this equation is based on the Creatinine-based “Bedside Schwartz” equation (2009) which is considered the best eGFR method for children.</p>
 					<p><a onclick="openEgfr('egfrAdult')" href="#" >Click here for our egfr Adult Calculator</a></p>
