--- a/app/templates/biochemistry_sections/lipid_profile.html
+++ b/app/templates/biochemistry_sections/lipid_profile.html
@@ -41,7 +41,7 @@
 			</table>
 			<div class="buttonContainer">
 				<input type="button" class="button" value="CALCULATE" onclick="calclp()">
-				<input type="button" class="button" value="CLEAR" onclick="clearData()">
+				<input type="button" class="button clear_button" value="CLEAR">
 			</div>
 			
 		  <p><strong>Note:</strong> If there is a value on the direct LDL, this will be used for calculating the ratios; the calculated LDL is just for comparison.
