--- a/app/templates/biochemistry_sections/urea_to_bun.html
+++ b/app/templates/biochemistry_sections/urea_to_bun.html
@@ -12,7 +12,7 @@
 			</tr>
 		  </table>
 		  <div class="buttonContainer">
-			<input type="button" class="button" value="CLEAR" onclick="clearData()"></input>
+			<input type="button" class="button clear_button" value="CLEAR"></input>
 		  </div>		  
 		</form>
 	</div>
