edited calculator output style

--- a/app/templates/biochemistry_sections/creatinine_clearance.html
+++ b/app/templates/biochemistry_sections/creatinine_clearance.html
@@ -4,27 +4,27 @@
 			<table id="creaCleartable" class="tableContainer">
 				<tr class="tableRow">
 				  <td class="inputLabel">24hr Urine Volume &nbsp;</td>
-				  <td><input type="text" class="inputData data" id="uvol2" placeholder="mL" onkeypress="displayUnits('uvol2Unit')"><span class="units" id="uvol2Unit">mL</span></td>
+				  <td><input type="text" class="inputData data" id="uvol2" placeholder="mL" onkeypress="displayUnits('uvol2Unit')"><span class="units" id="uvol2Unit" style="left:310px">mL</span></td>
 				</tr>
 				<tr class="tableRow">
 				  <td class="inputLabel">Serum Creatinine &nbsp;</td>
-				  <td><input type="text" class="inputData data" id="screa2" placeholder="mg/dL" onkeypress="displayUnits('screa2Unit')"><span class="units" id="screa2Unit">mg/dL</span></td>
+				  <td><input type="text" class="inputData data" id="screa2" placeholder="mg/dL" onkeypress="displayUnits('screa2Unit')"><span class="units" id="screa2Unit" style="left:310px">mg/dL</span></td>
 				</tr>
 				<tr class="tableRow">
 				  <td class="inputLabel">Urine Creatinine &nbsp;</td>
-				  <td><input type="text" class="inputData data" id="ucrea2" placeholder="mg/dL" onkeypress="displayUnits('ucrea2Unit')"><span class="units" id="ucrea2Unit">mg/dL</span></td>
+				  <td><input type="text" class="inputData data" id="ucrea2" placeholder="mg/dL" onkeypress="displayUnits('ucrea2Unit')"><span class="units" id="ucrea2Unit" style="left:310px">mg/dL</span></td>
 				</tr>
 				<tr class="tableRow">
 				  <td class="inputLabel">Collection Time &nbsp;</td>
-				  <td><input type="text" class="inputData data" id="coltime" placeholder="hours" onkeypress="displayUnits('coltimeUnit')"><span class="units" id="coltimeUnit">hours</span></td>
+				  <td><input type="text" class="inputData data" id="coltime" placeholder="hours" onkeypress="displayUnits('coltimeUnit')"><span class="units" id="coltimeUnit" style="left:310px">hours</span></td>
 				</tr>
 				<tr class="tableRow">
 				  <td class="inputLabel">Height &nbsp;</td>
-				  <td><input type="text" class="inputData data" id="height" placeholder="ft" onkeyup="calcbsa()" onkeypress="displayUnits('heightUnit')"><span class="units" id="heightUnit">ft</span></td>
+				  <td><input type="text" class="inputData data" id="height" placeholder="ft" onkeyup="calcbsa()" onkeypress="displayUnits('heightUnit')"><span class="units" id="heightUnit" style="left:310px">ft</span></td>
 				</tr>
 				<tr class="tableRow">
 				  <td class="inputLabel">Weight &nbsp;</td>
-				  <td><input type="text" class="inputData data" id="weight" placeholder="kg" onkeyup="calcbsa()" onkeypress="displayUnits('weightUnit')"><span class="units" id="weightUnit">kg</span></td>
+				  <td><input type="text" class="inputData data" id="weight" placeholder="kg" onkeyup="calcbsa()" onkeypress="displayUnits('weightUnit')"><span class="units" id="weightUnit" style="left:310px">kg</span></td>
 				</tr>
 				<tr>
 				  <td class="inputLabel">Body Surface Area: &nbsp;</td>
