--- a/app/templates/biochemistry_sections/egfr.html
+++ b/app/templates/biochemistry_sections/egfr.html
@@ -8,11 +8,11 @@
 						</tr>
 						<tr class="tableRow">
 						  <td class="inputLabel">Serum Creatinine:&nbsp;</td>
-						  <td align="center" colspan="2"><input type="text" class="inputData data" name="screa3" id="screa3" placeholder="mg/dL" onkeypress="displayUnits('screa3Unit')"><span class="units" id="screa3Unit">mg/dL</span></td>
+						  <td align="center" colspan="2"><input type="text" class="inputData data" name="screa3" id="screa3" placeholder="mg/dL" onkeypress="displayUnits('screa3Unit')"><span class="units" id="screa3Unit" style="left:310px">mg/dL</span></td>
 						</tr>
 						<tr class="tableRow">
 						  <td class="inputLabel">Age:&nbsp;</td>
-						  <td align="center" colspan="2"><input type="text" class="inputData data" name="age" id="egfrAge" placeholder="years" onkeypress="displayUnits('egfrAgeUnit')"><span class="units" id="egfrAgeUnit">years</span></td>
+						  <td align="center" colspan="2"><input type="text" class="inputData data" name="age" id="egfrAge" placeholder="years" onkeypress="displayUnits('egfrAgeUnit')"><span class="units" id="egfrAgeUnit" style="left:310px">years</span></td>
 						</tr>
 						<tr>
 						  <td class="inputLabel">Gender:&nbsp;</td>
@@ -45,11 +45,11 @@
 					</tr>		
 					<tr class="tableRow">
 					  <td class="inputLabel">Serum Creatinine:&nbsp;</td>
-					  <td align="center" colspan="2"><input type="text" class="inputData  data" name="screa3p" id="screa3p" placeholder="mg/dL" onkeypress="displayUnits('screa3pUnit')"><span class="units" id="screa3pUnit">mg/dL</span></td>
+					  <td align="center" colspan="2"><input type="text" class="inputData  data" name="screa3p" id="screa3p" placeholder="mg/dL" onkeypress="displayUnits('screa3pUnit')"><span class="units" id="screa3pUnit" style="left:310px">mg/dL</span></td>
 					</tr>
 					<tr class="tableRow">
 					  <td class="inputLabel">Age:&nbsp;</td>
-					  <td align="center" colspan="2"><input type="text" class="inputData  data" name="agep" id="agep" placeholder="years" onkeypress="displayUnits('agepUnit')"><span class="units" id="agepUnit">years</span></td>
+					  <td align="center" colspan="2"><input type="text" class="inputData  data" name="agep" id="agep" placeholder="years" onkeypress="displayUnits('agepUnit')"><span class="units" id="agepUnit" style="left:310px">years</span></td>
 					</tr>
 					<!--tr>
 					  <td class="inputLabel">Gender:&nbsp;</td>
