--- a/app/templates/biochemistry_sections/hba1c.html
+++ b/app/templates/biochemistry_sections/hba1c.html
@@ -10,7 +10,7 @@
 			<table class="tableContainer">
 				<tr>
 					<td class="inputLabel">HbA1c</td>
-					<td><input type="text" class="inputData data" name="hba1c_input" id="hba1c_input" placeholder="%"><span class="units" id="hba1cUnit">%</span></td>
+					<td><input type="text" class="inputData data" name="hba1c_input" id="hba1c_input" placeholder="%"><span class="units" id="hba1cUnit" style="left:310px">%</span></td>
 				</tr>
 				<tr>
 					<td class="inputLabel">eAG</td>
