--- a/app/templates/biochemistry_sections/tibc.html
+++ b/app/templates/biochemistry_sections/tibc.html
@@ -4,11 +4,11 @@
 			  <table id="tibcTable" class="tableContainer">
 					<tr class="tableRow">
 						<td class="inputLabelShort">Iron &nbsp;</td>
-						<td><input type="text" class="inputData data" name="siron" id="siron" placeholder="µg/dL" onkeypress="displayUnits('sironUnit')" onkeyup="calcTibc()"><span class="units" id="sironUnit">mL</span></td>
+						<td><input type="text" class="inputData data" name="siron" id="siron" placeholder="µg/dL" onkeypress="displayUnits('sironUnit')" onkeyup="calcTibc()"><span class="units" id="sironUnit" style="left:270px">µg/dL</span></td>
 					</tr>
 					<tr class="tableRow">
 						<td class="inputLabelShort">UIBC &nbsp;</td>
-						<td><input type="text" class="inputData data" name="suibc" id="suibc" placeholder="µg/dL" onkeypress="displayUnits('suibcUnit')" onkeyup="calcTibc()"><span class="units" id="suibcUnit">mL</span></td>
+						<td><input type="text" class="inputData data" name="suibc" id="suibc" placeholder="µg/dL" onkeypress="displayUnits('suibcUnit')" onkeyup="calcTibc()"><span class="units" id="suibcUnit" style="left:270px">µg/dL</span></td>
 					</tr>
 					<tr>
 						<td class="inputLabelShort">TIBC &nbsp;</td>
