--- a/app/templates/biochemistry_sections/transferrin_saturation.html
+++ b/app/templates/biochemistry_sections/transferrin_saturation.html
@@ -4,11 +4,11 @@
 			  <table id="tsatTable" class="tableContainer">
 				<tr class="tableRow">
 				  <td class="inputLabelShort">Iron &nbsp;</td>
-				  <td><input type="text" class="inputData data" name="siron2" id="siron2" placeholder="µg/dL" onkeypress="displayUnits('siron2Unit')"  onkeyup="calcTsat()"><span class="units" id="siron2Unit">µg/dL</span></td>
+				  <td><input type="text" class="inputData data" name="siron2" id="siron2" placeholder="µg/dL" onkeypress="displayUnits('siron2Unit')"  onkeyup="calcTsat()"><span class="units" id="siron2Unit" style="left:270px">µg/dL</span></td>
 				</tr>
 				<tr class="tableRow">
 				  <td class="inputLabelShort">UIBC &nbsp;</td>
-				  <td><input type="text" class="inputData data" name="suibc2" id="suibc2" placeholder="µg/dL" onkeypress="displayUnits('suibc2Unit')"  onkeyup="calcTsat()"><span class="units" id="suibc2Unit">µg/dL</span></td>
+				  <td><input type="text" class="inputData data" name="suibc2" id="suibc2" placeholder="µg/dL" onkeypress="displayUnits('suibc2Unit')"  onkeyup="calcTsat()"><span class="units" id="suibc2Unit" style="left:270px">µg/dL</span></td>
 				</tr>
 				<tr>
 				  <td class="inputLabelShort">Transferrin Saturation &nbsp;</td>
