--- a/app/templates/biochemistry_sections/urea_to_bun.html
+++ b/app/templates/biochemistry_sections/urea_to_bun.html
@@ -4,7 +4,7 @@
 		  <table id="ubunTable" class="tableContainer">
 			<tr class="tableRow">
 			  <td class="inputLabelShort">Urea &nbsp;</td>
-			  <td><input type="text" class="inputData data" name="surea" id="surea" placeholder="mg/dL" onkeypress="displayUnits('sureaUnit')" onkeyup="calcUreaToBun()"><span class="units" id="sureaUnit">mg/dL</span></td>
+			  <td><input type="text" class="inputData data" name="surea" id="surea" placeholder="mg/dL" onkeypress="displayUnits('sureaUnit')" onkeyup="calcUreaToBun()"><span class="units" id="sureaUnit" style="left:270px">mg/dL</span></td>
 			</tr>
 			<tr class="tableRow">
 			  <td class="inputLabelShort">BUN &nbsp;</td>
