--- a/app/templates/biochemistry_sections/lipid_profile.html
+++ b/app/templates/biochemistry_sections/lipid_profile.html
@@ -4,27 +4,27 @@
 			<table id="lipidProfileTable" class="tableContainer">
 				<tr>
 					<td class="inputLabel">Cholesterol &nbsp;</td>
-					<td><input type="text" class="inputData data" name="cholesterol" id="cholesterol" placeholder="mg/dL" onkeypress="displayUnits('cholUnit')"><span class="units" id="cholUnit">mg/dL</span></td>
+					<td><input type="text" class="inputData data" name="cholesterol" id="cholesterol" placeholder="mg/dL" onkeypress="displayUnits('cholUnit')"><span class="units" id="cholUnit" style="left:310px">mg/dL</span></td>
 				  </tr>
 				  <tr>
 					<td class="inputLabel">HDL &nbsp;</td>
-					<td><input type="text" class="inputData data" name="hdl" id="hdl" placeholder="mg/dL" onkeypress="displayUnits('hdlUnit')"><span class="units" id="hdlUnit">mg/dL</span></td>
+					<td><input type="text" class="inputData data" name="hdl" id="hdl" placeholder="mg/dL" onkeypress="displayUnits('hdlUnit')"><span class="units" id="hdlUnit" style="left:310px">mg/dL</span></td>
 				  </tr>
 				  <tr>
 					<td class="inputLabel">LDL &nbsp;</td>
-					<td><input type="text" class="inputData data" name="ldl" id="ldl" placeholder="mg/dL" onkeypress="displayUnits('ldlUnit')"><span class="units" id="ldlUnit">mg/dL</span></td>
+					<td><input type="text" class="inputData data" name="ldl" id="ldl" placeholder="mg/dL" onkeypress="displayUnits('ldlUnit')"><span class="units" id="ldlUnit" style="left:310px">mg/dL</span></td>
 				  </tr>
 				  <tr>
 					<td class="inputLabel">VLDL &nbsp;</td>
-					<td><input type="text" class="outputData data" name="vldl" id="vldl" placeholder="mg/dL" readonly><span class="units" id="vldlUnit">mg/dL</span></td>
+					<td><input type="text" class="outputData data" name="vldl" id="vldl" placeholder="mg/dL" readonly><span class="units" id="vldlUnit" style="left:310px">mg/dL</span></td>
 				  </tr>
 				  <tr>
 					<td class="inputLabel">Triglycerides &nbsp;</td>
-					<td><input type="text" class="inputData data" name="triglycerides" id="trig" placeholder="mg/dL" onkeypress="displayUnits('trigUnit')"><span class="units" id="trigUnit">mg/dL</span></td>
+					<td><input type="text" class="inputData data" name="triglycerides" id="trig" placeholder="mg/dL" onkeypress="displayUnits('trigUnit')"><span class="units" id="trigUnit" style="left:310px">mg/dL</span></td>
 				  </tr>
 				  <tr>
 					<td class="inputLabel">LDL Calculated &nbsp;</td>
-					<td><input type="text" class="outputData data" name="ldlc" id="ldlc" placeholder="mg/dL" readonly><span class="units" id="ldlcUnit">mg/dL</span></td>
+					<td><input type="text" class="outputData data" name="ldlc" id="ldlc" placeholder="mg/dL" readonly><span class="units" id="ldlcUnit" style="left:310px">mg/dL</span></td>
 				  </tr>
 				  <tr>
 					<td class="inputLabel">Cholesterol/HDL ratio:&nbsp;</td>
